<resources>
    <!--    <string name="app_name">Vini Veritas</string>-->
    <string name="app_name">ThemeStylesIcons</string>
    <string name="titulo_cadastro">Cadastro de Vinho</string>
    <string name="nome_vinho">Nome do Vinho:</string>
    <string name="safra">Safra:</string>
    <string name="pais_origem">País de Origem:</string>
    <string name="tipo_vinho">Tipo de Vinho:</string>
    <string name="caracteristicas">Características:</string>
    <string name="comentarios">Comentários:</string>
    <string name="hint_nome_vinho">Digite o nome do vinho</string>
    <string name="hint_safra">Ex: 2020</string>
    <string name="hint_comentarios">Suas impressões sobre o vinho</string>
    <string name="botao_limpar">Limpar</string>
    <string name="botao_salvar">Salvar</string>
    <string name="tipo_tinto">Tinto</string>
    <string name="tipo_branco">Branco</string>
    <string name="tipo_rose">Rosé</string>
    <string name="tipo_espumante">Espumante</string>
    <string name="caracteristica_seco">Seco</string>
    <string name="caracteristica_doce">Doce</string>
    <string name="caracteristica_frutado">Frutado</string>
    <string name="caracteristica_tanico">Tânico</string>
    <string name="formulario_limpo">Formulário limpo com sucesso!</string>
    <string name="erro_nome_vazio">Por favor, informe o nome do vinho!</string>
    <string name="erro_safra_vazia">Por favor, informe a safra!</string>
    <string name="erro_pais_nao_selecionado">Por favor, selecione um país!</string>
    <string name="erro_tipo_nao_selecionado">Por favor, selecione o tipo de vinho!</string>
    <string name="selecione_pais">Selecione um país</string>
    <string name="cadastro_vinho">Cadastro de Vinho</string>
    <string name="nome_do_vinho">Nome do Vinho:</string>
    <string name="safra_lb">Safra:</string>
    <string name="pais_de_origem">País de Origem:</string>
    <string name="tipo_de_vinho">Tipo de Vinho:</string>
    <string name="caracteristicas_lb">Características:</string>
    <string name="comentarios_lb">Comentários:</string>
    <string name="digite_o_nome_do_vinho">Digite o nome do vinho</string>
    <string name="pais_brasil">Brasil</string>
    <string name="pais_franca">França</string>
    <string name="pais_italia">Itália</string>
    <string name="pais_espanha">Espanha</string>
    <string name="pais_portugal">Portugal</string>
    <string name="pais_argentina">Argentina</string>
    <string name="pais_chile">Chile</string>
    <string name="pais_estados_unidos">Estados Unidos</string>
    <string name="pais_alemanha">Alemanha</string>
    <string name="pais_australia">Austrália</string>
    <string name="vinho_salvo_prefixo">Vinho salvo: </string>
    <string name="vinho_dados_nome">Vinho: </string>
    <string name="vinho_dados_safra">Safra: </string>
    <string name="vinho_dados_pais">País: </string>
    <string name="vinho_dados_tipo">Tipo: </string>
    <string name="vinho_dados_caracteristicas">Características: </string>
    <string name="vinho_dados_comentarios">Comentários: </string>
    <string name="logo_utfpr">Logo UTFPR</string>
    <string name="descricao">App Vini Veritas - Experiências pessoais de Vinhos</string>
    <string name="autor">Desenvolvedor: Hélio Serrano Brandão Junior</string>
    <string name="sobre">Sobre</string>
    <string name="nome">Nome:</string>
    <string name="safra_rotulo">Safra:</string>
    <string name="pais">País:</string>
    <string name="tipo">Tipo:</string>
    <string name="caracteristicas_rotulo">Caracteristicas:</string>
    <string name="comentarios_rotulo">Comentários:</string>
    <string name="cat_logo_de_vinhos">Catálogo de Vinhos</string>
    <string name="adicionar">Adicionar</string>
    <string name="novo_vinho">Novo Vinho</string>
</resources>